// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GodSelectModal renders correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 25,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      God
    </Text>
    <View
      style={
        Object {
          "paddingTop": 10,
          "width": 200,
        }
      }
    >
      <RCTPicker
        items={
          Array [
            Object {
              "label": "None",
              "textColor": undefined,
              "value": "None",
            },
            Object {
              "label": "Alvir and Valmir",
              "textColor": undefined,
              "value": "Alvir and Valmir",
            },
            Object {
              "label": "Amanushi",
              "textColor": undefined,
              "value": "Amanushi",
            },
            Object {
              "label": "Eleuia",
              "textColor": undefined,
              "value": "Eleuia",
            },
            Object {
              "label": "Elnir",
              "textColor": undefined,
              "value": "Elnir",
            },
            Object {
              "label": "Juntoku",
              "textColor": undefined,
              "value": "Juntoku",
            },
            Object {
              "label": "Ko",
              "textColor": undefined,
              "value": "Ko",
            },
            Object {
              "label": "Lacuna",
              "textColor": undefined,
              "value": "Lacuna",
            },
            Object {
              "label": "Maka",
              "textColor": undefined,
              "value": "Maka",
            },
            Object {
              "label": "Molhern",
              "textColor": undefined,
              "value": "Molhern",
            },
            Object {
              "label": "Nagil",
              "textColor": undefined,
              "value": "Nagil",
            },
            Object {
              "label": "Nai",
              "textColor": undefined,
              "value": "Nai",
            },
            Object {
              "label": "Nisoderu",
              "textColor": undefined,
              "value": "Nisoderu",
            },
            Object {
              "label": "Quetzil",
              "textColor": undefined,
              "value": "Quetzil",
            },
            Object {
              "label": "Sig",
              "textColor": undefined,
              "value": "Sig",
            },
            Object {
              "label": "Tambu",
              "textColor": undefined,
              "value": "Tambu",
            },
            Object {
              "label": "The Three Fortunes",
              "textColor": undefined,
              "value": "The Three Fortunes",
            },
            Object {
              "label": "Tyrnai",
              "textColor": undefined,
              "value": "Tyrnai",
            },
            Object {
              "label": "Vinti",
              "textColor": undefined,
              "value": "Vinti",
            },
            Object {
              "label": "Zaos",
              "textColor": undefined,
              "value": "Zaos",
            },
          ]
        }
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={15}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</Modal>
`;

exports[`ListItemsModal renders correctly with multiple items 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  visible={true}
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingHorizontal": 60,
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "paddingBottom": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        testing skills
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="sentences"
        onSubmitEditing={[Function]}
        placeholder="New"
        rejectResponderTermination={true}
        selectionColor="aquamarine"
        underlineColorAndroid="transparent"
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "whitesmoke",
                "fontSize": 18,
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          snapshots!
        </Text>
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "firebrick",
              "borderColor": "white",
              "borderLeftWidth": 3,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Object {
                  "color": "white",
                  "fontSize": 21,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "whitesmoke",
                "fontSize": 18,
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          component
        </Text>
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "firebrick",
              "borderColor": "white",
              "borderLeftWidth": 3,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Object {
                  "color": "white",
                  "fontSize": 21,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "whitesmoke",
                "fontSize": 18,
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          integration
        </Text>
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "firebrick",
              "borderColor": "white",
              "borderLeftWidth": 3,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Object {
                  "color": "white",
                  "fontSize": 21,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</Modal>
`;

exports[`ListItemsModal renders correctly with no items 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  visible={true}
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingHorizontal": 60,
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "paddingBottom": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        testing skills
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="sentences"
        onSubmitEditing={[Function]}
        placeholder="New"
        rejectResponderTermination={true}
        selectionColor="aquamarine"
        underlineColorAndroid="transparent"
      />
    </View>
  </RCTScrollView>
</Modal>
`;

exports[`ListItemsModal renders correctly with one item 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  visible={true}
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingHorizontal": 60,
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "paddingBottom": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        testing skills
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="sentences"
        onSubmitEditing={[Function]}
        placeholder="New"
        rejectResponderTermination={true}
        selectionColor="aquamarine"
        underlineColorAndroid="transparent"
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "whitesmoke",
                "fontSize": 18,
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          snapshots!
        </Text>
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "firebrick",
              "borderColor": "white",
              "borderLeftWidth": 3,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Object {
                  "color": "white",
                  "fontSize": 21,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</Modal>
`;

exports[`ShardsChangeModal renders correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 25,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Shards
    </Text>
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    >
      Current: 999
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 80,
          "paddingVertical": 20,
        }
      }
    >
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "whitesmoke",
            "borderColor": "white",
            "borderLeftWidth": 3,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Object {
                "color": "white",
                "fontSize": 21,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 3,
            "flexDirection": "column",
            "paddingHorizontal": 30,
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          keyboardType="numeric"
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="0"
          rejectResponderTermination={true}
          selectionColor="aquamarine"
          style={
            Array [
              Object {
                "fontSize": 25,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "textAlign": "center",
              },
            ]
          }
          underlineColorAndroid="transparent"
        />
      </View>
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "whitesmoke",
            "borderColor": "white",
            "borderLeftWidth": 3,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Object {
                "color": "white",
                "fontSize": 21,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`SkillChangeModal renders correctly with a value 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 25,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      testing power
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 30,
        }
      }
    >
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderColor": "white",
            "borderLeftWidth": 3,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Object {
                "color": "white",
                "fontSize": 21,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "paddingHorizontal": 25,
            },
          ]
        }
      >
        100
      </Text>
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderColor": "white",
            "borderLeftWidth": 3,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Object {
                "color": "white",
                "fontSize": 21,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`SkillChangeModal renders correctly with no value 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 25,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 30,
        }
      }
    >
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderColor": "white",
            "borderLeftWidth": 3,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Object {
                "color": "white",
                "fontSize": 21,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "paddingHorizontal": 25,
            },
          ]
        }
      >
        0
      </Text>
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderColor": "white",
            "borderLeftWidth": 3,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Object {
                "color": "white",
                "fontSize": 21,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`StaminaChangeModal renders correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 25,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      stamina
    </Text>
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    >
      Max
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 30,
        }
      }
    >
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderColor": "white",
            "borderLeftWidth": 3,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Object {
                "color": "white",
                "fontSize": 21,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "paddingHorizontal": 25,
            },
          ]
        }
      >
        10
      </Text>
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderColor": "white",
            "borderLeftWidth": 3,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Object {
                "color": "white",
                "fontSize": 21,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    >
      Current
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 30,
        }
      }
    >
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderColor": "white",
            "borderLeftWidth": 3,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Object {
                "color": "white",
                "fontSize": 21,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "paddingHorizontal": 25,
            },
          ]
        }
      >
        5
      </Text>
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderColor": "white",
            "borderLeftWidth": 3,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Object {
                "color": "white",
                "fontSize": 21,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;
